[project]
name = "comfy-photoshop-sd"
description = "Nodes: load Image with metadata, get config data, load image from base64 string, Load Loras From Prompt, Generate Latent Noise, Combine Two Latents Into Batch, General Purpose Controlnet Unit, ControlNet Script, Content Mask Latent, Auto-Photoshop-SD Seed, Expand and Blur the Mask"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/AbdullahAlfaraj/Comfy-Photoshop-SD"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "Comfy-Photoshop-SD"
Icon = ""
